[package]
name = "flock_edits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] } # make sure this is the latest version
rand = "0.8"
bevy_egui = "0.13"